# ll1-parser

./: .gitignore  traza_analisis.txt
docs/: Analisis_Completo.md  CP_Lexer y Parser.md  Objetivo.md  README.md
src/: CMakeLists.txt  main.cpp  main.cpp.bak
src/grammar/: CMakeLists.txt  grammar.txt
src/grammar/analysis/: first_set.cpp  first_set.h  follow_set.cpp  follow_set.h  ll1_table.cpp  ll1_table.h  validator.cpp  validator.h
src/grammar/core/: grammar.cpp  grammar.h
src/grammar/io/: grammar_parser.cpp  grammar_parser.h
src/lexer/: CMakeLists.txt
src/lexer/error_handler/: error_handler.cpp  error_handler.h
src/lexer/lexer/: lexer.cpp  lexer.h
src/lexer/symbol_table/: symbol_table.cpp  symbol_table.h
src/lexer/token/: token.cpp  token.h  token_type.h
src/lexer/utils/: utils.cpp  utils.h
src/parser/: CMakeLists.txt  parser.cpp  parser.h  symbol_manager.cpp  symbol_manager.h
src/parser/ast/: ast_builder.cpp  ast_node.cpp  ast_node.h  ast_visitor.cpp
src/parser/semantic/: semantic_analyzer.cpp  semantic_analyzer.h
src/parser/trace/: trace_formatter.cpp  trace_manager.cpp  trace_manager.h
test/: programa.txt  programa_duplicado.txt  programa_error.txt
